<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp">


        <TextView
            style="@style/home_down_tv"
            android:drawableTop="@drawable/icon_rocket"
            android:text="@string/phoneRkt"
            android:id="@+id/home_down_rocket" />

        <TextView
            style="@style/home_down_tv"
            android:drawableTop="@drawable/icon_softmgr"
            android:text="@string/softMgr"
            android:id="@+id/home_down_softMgr" />

        <TextView
            style="@style/home_down_tv"
            android:drawableTop="@drawable/icon_phonemgr"
            android:text="@string/phoneMgr"
            android:id="@+id/home_down_phoneMgr" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <TextView
            style="@style/home_down_tv"
            android:drawableTop="@drawable/icon_telmgr"
            android:text="@string/telMgr"
            android:id="@+id/home_down_telMgr" />

        <TextView
            style="@style/home_down_tv"
            android:drawableTop="@drawable/icon_filemgr"
            android:text="@string/fileMgr"
            android:id="@+id/home_down_fileMgr" />

        <TextView
            style="@style/home_down_tv"
            android:drawableTop="@drawable/icon_sdclean"
            android:text="@string/sdClean"
            android:id="@+id/home_down_sdClean" />
    </LinearLayout>
</LinearLayout>