<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.androidy.azsecuer.activity.FileManagerBrowseActivity">

    <include layout="@layout/include_home_actionbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_number"
            android:textSize="20sp"
            android:layout_margin="5dp"
            android:id="@+id/textView3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/pb_soft_manager"
            android:layout_gravity="center_vertical"
            android:id="@+id/tv_file_manager_browse_number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_user_space"
            android:textSize="20sp"
            android:layout_margin="5dp"
            android:id="@+id/textView5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/pb_soft_manager"
            android:layout_gravity="center_vertical"
            android:id="@+id/tv_file_manager_browse_size" />
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lv_file_manager_browse"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cb_file_manager_browse_all" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deleteChecked"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:background="@color/colorPrimary"
            android:id="@+id/btn_file_manager_browse_delete" />
    </LinearLayout>

</LinearLayout>
