<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginLeft="10dp"
    >

  <com.androidy.azsecuer.view.PiecharView
      android:id="@+id/cview_softwareservice_piechart"
      android:layout_width="200dp"
      android:layout_margin="10dp"
      android:layout_height="match_parent"
      android:layout_gravity="center"/>
    <LinearLayout
        android:weightSum="3"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/text_soft_manager_title"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:background="@color/colorPrimary"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/text_soft_manager_built"/>
            <TextView
                android:id="@+id/tv_include_built_space"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="5dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:background="@color/batteryPower_progress"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/text_soft_manager_external"/>
            <TextView
                android:id="@+id/tv_include_external_space"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textColor="@color/batteryPower_progress"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>